# queen

./: .dockerignore  .gitignore  .npmignore  API.md  APP_PLAN.md  ASYNC.md  AVAILABLE_TRACES_FEATURE.md  CACHE.md  CHANGELOG_STATIC_SERVING.md  CLUSTERING_ISSUES.md  COMMIT.md  CURSOR_BASED_CONSUMPTION.md  DASH.md  DASHBOARD-V3.md  DASHBOARD.md  DASHBOARD_API_QUICK_START.md  DASH_V4.md  DEPLOYMENT.md  DEVELOPING.md  DISCOVERY.md  Dockerfile  Extend.md  FAILOVER_TESTING.md  FRONTEND_REFACTOR_COMPLETE.md  FRONTEND_REFACTOR_PLAN.md  HIGH_PERFORMANCE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_STREAMING.md  LIBQUEEN_HOTPATH_IMPROVEMENT.md  LIBQUEEN_IMPROVEMENTS.md  LIBQUEEN_TUNING.md  LOAD.md  LONG_POLLING_REDESIGN.md  METRICS.md  MOD_QUEUE.md  NEW_README.md  NPM_PACKAGING_SOLUTION.md  (+77 more)
app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
benchmark/: Makefile  README.md  benchmark-kafka.js  benchmark-pulsar-keyshared.js  benchmark-pulsar.js  benchmark-queen-autocannon.js  benchmark-queen.js  config.js  docker-compose.kafka.yml  (+29 more)
benchmark-queen/: README.md
client-py/: BUGFIX_CONSUMER_HANDLER.md  LICENSE  PUBLISH_TLDR.md  PYTHON_CLIENT_DOCS_ADDED.md  QUICK_TEST_GUIDE.md  README.md  publish.sh  pyproject.toml  run_tests.sh
client-py/queen/: __init__.py  client.py  types.py
client-py/queen/admin/: admin.py
client-py/queen/buffer/: __init__.py  buffer_manager.py  message_buffer.py
client-py/queen/builders/: __init__.py  dlq_builder.py  operation_builder.py  push_builder.py  queue_builder.py  transaction_builder.py
client-py/queen/consumer/: consumer_manager.py
client-py/queen/http/: http_client.py  load_balancer.py
client-py/queen/stream/: __init__.py  stream_builder.py  window.py
client-py/queen/utils/: __init__.py  defaults.py  logger.py
client-py/tests/: GETTING_STARTED.md  README.md  conftest.py  run_tests.py  test_auth.py  test_complete.py  test_consume.py  test_dlq.py  test_pop.py  test_push.py  test_queue.py  test_subscription.py  test_transaction.py
(+2240 files in other folders)
